fix navigation mobile

--- a/src/assets/styles/search-bar.css
+++ b/src/assets/styles/search-bar.css
@@ -5,7 +5,7 @@
 
 .app-search-bar-items .app-search-bar-item__input {
   display: flex;
-  width: 300px;
+  width: 100%;
   height: 35px;
   padding: 8px 12px;
   align-items: center;
@@ -42,4 +42,10 @@ input[type='search'] {
   font-weight: 400;
   line-height: 120%;
   text-transform: capitalize;
+}
+
+@media (min-width: 1200px) {
+  .app-search-bar-items .app-search-bar-item__input {
+    width: 300px;
+  }
 }
