--- a/src/assets/styles/top-navigation.css
+++ b/src/assets/styles/top-navigation.css
@@ -172,6 +172,7 @@
   background-color: transparent !important;
   border: none !important;
   border-radius: 0 !important;
+  width: auto;
 }
 
 .custom-dropdown-toggle.active {
@@ -181,26 +182,26 @@
 
 .custom-dropdown-toggle:hover {
   color: var(--Danger-600, #ce2f2f) !important;
-  border-bottom: 1.833px solid var(--Primary-600, #d71149) !important;
+  /* border-bottom: 1.833px solid var(--Primary-600, #d71149) !important; */
 }
 .custom-dropdown-toggle:focus {
   color: var(--Danger-600, #ce2f2f) !important;
-  border-bottom: 1.833px solid var(--Primary-600, #d71149) !important;
+  /* border-bottom: 1.833px solid var(--Primary-600, #d71149) !important; */
 }
 .custom-dropdown-toggle:active {
   color: var(--Danger-600, #ce2f2f) !important;
-  border-bottom: 1.833px solid var(--Primary-600, #d71149) !important;
+  /* border-bottom: 1.833px solid var(--Primary-600, #d71149) !important; */
 }
 
 .custom-dropdown-megamenu {
-  margin-top: 30px !important;
-  width: 624px;
-  height: 400px;
+  margin-top: 20px !important;
+  width: auto;
+  height: 250px;
   overflow: auto;
   flex-shrink: 0;
   border-radius: 4px;
   background: var(--Background, #fff);
-  padding: 30px !important;
+  /* padding: 30px !important; */
 }
 .custom-dropdown-megamenu__heading {
   color: var(--Danger-600, #ce2f2f);
@@ -250,14 +251,13 @@
 }
 
 .custom-dropdown-menu {
-  margin-top: 30px !important;
-  width: 200px;
-  height: auto;
+  margin-top: 20px !important;
+  width: auto;
+  height: 250px;
   overflow: auto;
   flex-shrink: 0;
   border-radius: 4px;
   background: var(--Background, #fff);
-  /* padding: 30px !important; */
 }
 
 .custom-dropdown-menu__item {
@@ -295,4 +295,64 @@
   background-color: #fff0f2;
   border-radius: 4px;
   border-bottom: none;
+}
+
+/* custom-navigation__accordion */
+.custom-navigation__accordion {
+  background: #fff;
+  border-radius: 8px;
+}
+
+.custom-navigation__accordion-item {
+  border: 0 !important;
+  border-radius: 8px !important;
+}
+.custom-navigation__accordion-header {
+  width: 100%;
+  height: auto;
+  background-color: #fff !important;
+  color: var(--Font-600, #5d5d5d) !important;
+}
+
+.custom-navigation__accordion-header .accordion-button {
+  padding: 0;
+  height: 50px;
+  border: 0 !important;
+  border-radius: 0 !important;
+  background-color: #fff !important;
+  border-bottom: 0 !important;
+  color: var(--Font-600, #5d5d5d) !important;
+  font-family: 'Poppins', sans-serif;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 120%;
+  transition: ease;
+}
+
+.custom-navigation__accordion-header .accordion-button:focus {
+  outline: none !important;
+}
+
+@media (min-width: 1200px) {
+  .custom-dropdown-megamenu {
+    margin-top: 30px !important;
+    width: 624px;
+    height: 400px;
+    overflow: auto;
+    flex-shrink: 0;
+    border-radius: 4px;
+    background: var(--Background, #fff);
+    padding: 30px !important;
+  }
+  .custom-dropdown-menu {
+    margin-top: 30px !important;
+    width: 200px;
+    height: auto;
+    overflow: auto;
+    flex-shrink: 0;
+    border-radius: 4px;
+    background: var(--Background, #fff);
+    /* padding: 30px !important; */
+  }
 }
